test/Fail/TabsInPragmas.agda
{-# OPTIONS	--type-in-type #-}

module TabsInPragmas where
