test/Fail/TabsInPragmas.err
TabsInPragmas.agda:1.5: error: [ParseError]
Lexical error (you may want to replace tabs with spaces):
